---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\nconst cute = \"cute\"\nconst cute_bee = cute ++ \"bee\"\n\npub fn main() {\n  cute_bee\n}\n"
---
----- SOURCE CODE

const cute = "cute"
const cute_bee = cute ++ "bee"

pub fn main() {
  cute_bee
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 5).
-spec main() -> binary().
main() ->
    <<"cute"/utf8, "bee"/utf8>>.
